[gd_scene load_steps=33 format=3 uid="uid://b1cx0tl7hjdsx"]

[ext_resource type="Texture2D" uid="uid://03rpwj1awcnp" path="res://Art/Tiles/Tilled_Dirt_v2.png" id="1_7rtwg"]
[ext_resource type="Script" path="res://Scenes/world.gd" id="1_th0rm"]
[ext_resource type="PackedScene" uid="uid://comtb6uhdb744" path="res://Player/player.tscn" id="1_xjr4a"]
[ext_resource type="AudioStream" uid="uid://dkouer8i4h5em" path="res://Art/Music/bored, honestly.mp3" id="2_ayfj8"]
[ext_resource type="Texture2D" uid="uid://c3uvniwtcnchu" path="res://Art/Tiles/interior free.png" id="2_llbyl"]
[ext_resource type="PackedScene" uid="uid://0qmvdor6ww51" path="res://Collectable/clock.tscn" id="2_ypky2"]
[ext_resource type="PackedScene" uid="uid://c4l26jpiv5jk" path="res://Collectable/collectable.tscn" id="3_s6kgl"]
[ext_resource type="Texture2D" uid="uid://c2w772y2wn3h0" path="res://Art/Tiles/Water.png" id="3_vhqud"]
[ext_resource type="Texture2D" uid="uid://bfsv6sn4b7snb" path="res://Art/Tiles/Grass.png" id="4_yw4kj"]
[ext_resource type="Texture2D" uid="uid://bc2rdxglcydvj" path="res://Art/Tiles/Hills.png" id="5_h3qd7"]
[ext_resource type="Texture2D" uid="uid://5r5qh7n246yo" path="res://Art/Tiles/Wooden_House_Walls_Tilset.png" id="6_4oxry"]
[ext_resource type="Texture2D" uid="uid://bd3fsn37r4xaj" path="res://Art/Tiles/Wooden_House_Roof_Tilset.png" id="7_nisbf"]
[ext_resource type="Texture2D" uid="uid://bg671w47bykgv" path="res://Art/Tiles/Fences.png" id="8_xj37r"]
[ext_resource type="Script" path="res://Scenes/canvas_layer.gd" id="10_hmkbn"]
[ext_resource type="PackedScene" uid="uid://cymqr57snxjjr" path="res://GUI/inventory_gui.tscn" id="10_tf3gs"]
[ext_resource type="Texture2D" uid="uid://deidaqcxtifl6" path="res://Art/Icon/Basic_Furniture.png" id="13_r8sw2"]
[ext_resource type="Script" path="res://Scenes/buy_canvas.gd" id="14_1oiea"]
[ext_resource type="PackedScene" uid="uid://b4w6d4qyghx5o" path="res://GUI/buy_gui.tscn" id="15_mwxef"]
[ext_resource type="PackedScene" uid="uid://cgpqoerbatqrp" path="res://GUI/hotbar.tscn" id="18_eu45l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g81oa"]
resource_local_to_scene = true
size = Vector2(10, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf0qv"]
atlas = ExtResource("13_r8sw2")
region = Rect2(18.9279, 6.01398, 11.1087, 7.00864)

[sub_resource type="PackedScene" id="PackedScene_dyksk"]
_bundled = {
"base_scene": 0,
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Collectable", "CollisionShape2D", "shape", "Sprite2D", "texture"),
"node_count": 3,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 2147483647, 0, -1, 0, 0, 0, 0, 2147483647, 262145, -1, 1, 2, 1, 0, 0, 0, 2147483647, 524291, -1, 1, 4, 2, 0),
"variants": [ExtResource("3_s6kgl"), SubResource("RectangleShape2D_g81oa"), SubResource("AtlasTexture_uf0qv")],
"version": 3
}

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_3bt0g"]
resource_name = "Collectable"
scenes/1/scene = ExtResource("2_ypky2")
scenes/2/scene = SubResource("PackedScene_dyksk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wcipf"]
texture = ExtResource("1_7rtwg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
8:6/0 = 0
9:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sxxbc"]
texture = ExtResource("2_llbyl")
0:0/0 = 0
1:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5bdyi"]
texture = ExtResource("3_vhqud")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2ks1o"]
texture = ExtResource("4_yw4kj")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, -6.27557, 8, -5.74524, 0.441941, -4.15425, -3.27037, 0.441942, -5.56847, 8, -6.0988, 8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -8, 8, -5.74524, -8, -6.0988)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 5.39169, 8, 4.68458, -2.91682, -1.14905, -5.92202, -8, -5.39169)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, -5.92202, 8, -5.92202, -8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.0988, -8, 8, -8, 8, 8, 5.92202, 8)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 5.21491, 5.39169, 8, 8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, 4.33103, -3.44715, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, 6.0988, 0.265165, 5.39169, -3.97748, 3.27037, -5.92202, -0.795495, -6.0988, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 5.92202, -8, 8, 8, 8, 8, 5.56847)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, 5.56847, -0.0883875, 5.21491, 5.39169, 0.972272, 5.74524, -8)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.68458, -8, 8, -5.21491, 8, -8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.50781, -8, -8, -5.56847, -8, -8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wgfex"]
texture = ExtResource("5_h3qd7")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
9:6/0 = 0
10:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dtcvw"]
texture = ExtResource("6_4oxry")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(3.27037, -8, 3.27037, 8, 8, 8, 8, -8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -3.09359, -8, -3.09359, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(2.91682, -8, 3.09359, 8, 8, 8, 8, -8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -2.91681, -8, -3.09359, 8, -8, 8)
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_817en"]
texture = ExtResource("7_nisbf")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l38cs"]
texture = ExtResource("8_xj37r")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_si5ig"]
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
sources/2 = SubResource("TileSetAtlasSource_sxxbc")
sources/3 = SubResource("TileSetAtlasSource_5bdyi")
sources/4 = SubResource("TileSetAtlasSource_2ks1o")
sources/5 = SubResource("TileSetAtlasSource_wgfex")
sources/6 = SubResource("TileSetAtlasSource_dtcvw")
sources/8 = SubResource("TileSetAtlasSource_817en")
sources/9 = SubResource("TileSetAtlasSource_l38cs")
sources/10 = SubResource("TileSetAtlasSource_wcipf")
sources/0 = SubResource("TileSetScenesCollectionSource_3bt0g")

[node name="World" type="Node2D"]
script = ExtResource("1_th0rm")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_ayfj8")
autoplay = true
parameters/looping = false

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_si5ig")
format = 2
layer_0/name = "Water"
layer_0/tile_data = PackedInt32Array(0, 131075, 0, 65536, 65539, 0, 131072, 131075, 0, 196608, 131075, 0, 262144, 196611, 0, 327680, 3, 0, 393216, 196611, 0, 458752, 131075, 0, 524288, 65539, 0, 524289, 131075, 0, 524290, 196611, 0, 524291, 65539, 0, 524292, 3, 0, 524293, 3, 0, 524294, 65539, 0, 524295, 65539, 0, 524296, 131075, 0, 524297, 3, 0, 524298, 131075, 0, 524299, 196611, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 458766, 131075, 0, 393230, 65539, 0, 327694, 3, 0, 262158, 196611, 0, 196622, 65539, 0, 131086, 65539, 0, 1, 131075, 0, 2, 196611, 0, 3, 196611, 0, 4, 3, 0, 5, 196611, 0, 6, 3, 0, 7, 3, 0, 8, 65539, 0, 9, 131075, 0, 10, 3, 0, 11, 65539, 0, 12, 131075, 0, 13, 65539, 0, 14, 196611, 0, 65550, 65539, 0, 65537, 3, 0, 65538, 65539, 0, 65539, 65539, 0, 65540, 196611, 0, 65541, 3, 0, 65542, 131075, 0, 65543, 131075, 0, 65544, 196611, 0, 65545, 3, 0, 65546, 196611, 0, 65547, 65539, 0, 65548, 3, 0, 65549, 131075, 0, 131085, 3, 0, 196621, 196611, 0, 262157, 131075, 0, 327693, 65539, 0, 393229, 65539, 0, 458765, 196611, 0, 458764, 131075, 0, 458763, 196611, 0, 458762, 131075, 0, 458761, 196611, 0, 458760, 196611, 0, 458759, 131075, 0, 458758, 196611, 0, 458757, 196611, 0, 458756, 65539, 0, 458755, 131075, 0, 458754, 196611, 0, 458753, 196611, 0, 393217, 3, 0, 327681, 196611, 0, 262145, 131075, 0, 196609, 3, 0, 131073, 65539, 0, 131076, 131075, 0, 131077, 196611, 0, 196613, 3, 0, 196612, 65539, 0, 262148, 3, 0, 262149, 3, 0, 327685, 65539, 0, 327684, 65539, 0, 327683, 3, 0, 262147, 3, 0, 262146, 131075, 0, 196611, 196611, 0, 196610, 65539, 0, 327682, 131075, 0, 393218, 3, 0, 393219, 3, 0, 393220, 3, 0, 393221, 3, 0, 393222, 3, 0)
layer_1/name = "Ground"
layer_1/tile_data = PackedInt32Array(65537, 4, 0, 131073, 4, 1, 196609, 4, 1, 262145, 4, 1, 65538, 65540, 0, 65539, 65540, 0, 65540, 131076, 0, 131076, 131076, 1, 196612, 131076, 2, 196611, 65540, 2, 131074, 5, 6, 131075, 65541, 6, 196610, 327684, 1, 262146, 131076, 1, 327682, 327684, 2, 327683, 65540, 0, 327684, 65540, 0, 65541, 4, 0, 131077, 4, 1, 196613, 4, 1, 262149, 4, 1, 65542, 65540, 0, 65543, 65540, 0, 65544, 65540, 0, 65546, 65540, 0, 65547, 65540, 0, 65548, 65540, 0, 65549, 131076, 0, 131085, 131076, 1, 196621, 131076, 1, 262157, 131076, 1, 327693, 131076, 1, 393229, 131076, 1, 458765, 131076, 2, 458764, 65540, 2, 458763, 65540, 2, 458762, 65540, 2, 458761, 65540, 2, 458760, 65540, 2, 458759, 65540, 2, 131079, 65541, 1, 196615, 65541, 1, 262151, 131077, 5, 327687, 65541, 1, 393223, 196613, 6, 131080, 65541, 1, 196616, 65541, 1, 262152, 131077, 5, 327688, 65541, 1, 393224, 131077, 5, 131081, 65541, 1, 196617, 5, 5, 262153, 65541, 1, 327689, 131077, 5, 393225, 65541, 1, 131082, 65541, 1, 196618, 65541, 1, 262154, 65541, 5, 327690, 65541, 1, 393226, 65541, 5, 131083, 131077, 5, 196619, 65541, 1, 262155, 5, 5, 327691, 65541, 1, 393227, 65540, 1, 131084, 327685, 5, 196620, 327685, 6, 262156, 65541, 1, 327692, 65541, 1, 393228, 65540, 1, 131078, 65541, 1, 327681, 4, 1, 393219, 65540, 2, 393220, 65540, 2, 393218, 65540, 2, 393217, 4, 2, 458758, 4, 2, 393222, 393220, 1, 393221, 65540, 2, 327685, 393220, 2, 327686, 65541, 1, 262150, 196613, 5, 196614, 65541, 1, 65545, 65540, 0)
layer_2/name = "Home"
layer_2/tile_data = PackedInt32Array(131078, 65542, 0, 131079, 65542, 0, 131080, 131078, 0, 196615, 65542, 1, 131077, 6, 0, 196614, 65542, 1, 196613, 6, 1, 196616, 131078, 1)
layer_3/name = "Roof"
layer_3/tile_data = PackedInt32Array(131081, 196618, 3, 196617, 196618, 3, 196618, 196618, 3, 131082, 196618, 3, 131083, 196618, 3, 196619, 196618, 3, 131084, 196618, 3, 196620, 196618, 3)
layer_4/name = "Fences"
layer_4/tile_data = PackedInt32Array(131078, 262146, 3, 131079, 262146, 2, 131075, 131074, 1, 65538, 262146, 0, 131074, 262146, 1)
layer_5/name = "Collectibles"
layer_5/tile_data = PackedInt32Array(393228, 0, 65536, 393224, 0, 65536, 393226, 0, 65536, 262156, 0, 65536)

[node name="Player" parent="." instance=ExtResource("1_xjr4a")]
position = Vector2(92, 90)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("10_hmkbn")

[node name="InventoryGui" parent="CanvasLayer" instance=ExtResource("10_tf3gs")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -30.5
offset_right = 68.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2

[node name="BuyCanvas" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("14_1oiea")

[node name="BuyGui" parent="BuyCanvas" instance=ExtResource("15_mwxef")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.5
offset_top = 3.0
offset_right = 65.5
offset_bottom = 36.0
grow_horizontal = 2

[node name="Hotbar" type="CanvasLayer" parent="."]

[node name="Hotbar2" parent="Hotbar" instance=ExtResource("18_eu45l")]
anchors_preset = 10
anchor_right = 1.0
offset_left = 64.0
offset_top = 126.0
offset_right = -60.0
offset_bottom = 126.0
grow_horizontal = 2

[connection signal="body_entered" from="TileMap/Clock" to="TileMap/Clock" method="_on_body_entered"]
[connection signal="body_exited" from="TileMap/Clock" to="TileMap/Clock" method="_on_body_exited"]
[connection signal="body_entered" from="TileMap/@Area2D@551071" to="TileMap/@Area2D@551071" method="_on_body_entered"]
[connection signal="body_exited" from="TileMap/@Area2D@551071" to="TileMap/@Area2D@551071" method="_on_body_exited"]
[connection signal="body_entered" from="TileMap/@Area2D@551072" to="TileMap/@Area2D@551072" method="_on_body_entered"]
[connection signal="body_exited" from="TileMap/@Area2D@551072" to="TileMap/@Area2D@551072" method="_on_body_exited"]
[connection signal="body_entered" from="TileMap/@Area2D@551073" to="TileMap/@Area2D@551073" method="_on_body_entered"]
[connection signal="body_exited" from="TileMap/@Area2D@551073" to="TileMap/@Area2D@551073" method="_on_body_exited"]
[connection signal="closed" from="CanvasLayer/InventoryGui" to="." method="_on_inventory_gui_closed"]
[connection signal="opened" from="CanvasLayer/InventoryGui" to="." method="_on_inventory_gui_opened"]
[connection signal="closed" from="BuyCanvas/BuyGui" to="." method="_on_buy_gui_closed"]
[connection signal="opened" from="BuyCanvas/BuyGui" to="." method="_on_buy_gui_opened"]
